[package]
name = "calculator-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
rtt-target = "0.5.0"
cortex-m-rt = "0.7.3"
nb = "1.1.0"
debouncr = "0.2.2"
fugit = "0.3.7"
libm = "0.2.8"
panic-rtt-target = "0.1.3"
alloc-cortex-m = "0.4.4"


[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[dependencies.caldyn]
path = "../caldyn"

[profile.dev]
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lib]
name = "calculator_firmware_library"
path = "src/lib.rs"

[[bin]]
name = "calculator_firmware_binary"
path = "src/main.rs"
